--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,16 @@
-.App {
+.error-message{
+  color: red;
   text-align: center;
+  display: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-control:invalid:not(:focus):not(:placeholder-shown) {
+  border: solid 2px #fe2c12;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px)
-  }
-  100% {
-    transform: translateY(0px)
-  }
+.form-control:invalid:not(:empty)~p {
+  display: block;
+  color: #fe2c12;
+  /* font-family: Lato; */
+  font-size: 15px;
 }
