updated some new features and readme.md as well, finalyzing

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,11 @@
   border-color: #cef transparent transparent transparent;
 }
 
+.custom-card div:not(:last-child){
+  margin-right: 22px;
+}
+
+/* Loader CSS */
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
 }
